# xfire

gfire/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.mingw  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  gaim-xfire-installer.nsi  gaim-xfire.spec  gaim-xfire.spec.asdf  gaim-xfire.spec.in  libtool  pre_config.h  pre_config.h.in  protocol.md  protocol.odt  xfire-installer.nsi  xfire_config.h
gfire/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gfire/debian/: changelog  control  copyright  install  rules
gfire/nsis/: Thumbs.db
gfire/nsis/translations/: english.nsh
gfire/pixmaps/: Makefile  Makefile.am  Makefile.in
gfire/src/: Makefile  Makefile.am  Makefile.in  TODO  make_readme  x_create.c  x_create.h  x_games.c  x_games.h  x_games.xml  x_launch.xml  x_packets.c  x_packets.h  x_search.c  x_search.h  x_utils.c  x_utils.h  xfire.c  xfire.xcf
gfire/src/.deps/: x_create.P  x_create.Plo  x_games.P  x_packets.P  x_packets.Plo  x_search.P  x_search.Plo  x_utils.P  x_utils.Plo  xfire.P  xfire.Plo
net.sphene.xfirelib/: .project
xfiregateway/: Jamfile  Jamrules  README  plugin.xml
xfiregateway/src/: Jamfile  gatewayhandler.cpp  gatewayhandler.h  monitoredobj.cpp  monitoredobj.h  parsegamexml.cpp  parsegamexml.h  parser.cpp  parser.h  simplelib.cpp  simplelib.h  srcheader.txt  user.cpp  user.h  xfiregateway.cpp  xfiregateway.h
xfirelib/: Doxyfile  Jamfile  Jamrules  README  WebLinks
xfirelib/doc/: convertdocs.pl  htmlbottom.tmpl  htmlheader.tmpl
xfirelib/src/: Jamfile  SHA1.cpp  (+76 more)
(+89 files in other folders)
